cib/infra-fe/cib-prod/mf-bc-inquiries/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    provider: ngkube
    group: bc-portal
  name: mf-bc-inquiries
  annotations:
    haproxy.router.openshift.io/rewrite-target: /
    haproxy.router.openshift.io/timeout: 120s
spec:
  host: cbc.alinma.internal
  path: "/bc-inquiries-ui"
  to:
    kind: Service
    name: mf-bc-inquiries
  port:
    targetPort: 8080
  tls:
    termination: edge
    certificate: "-----BEGIN CERTIFICATE-----\r\nMIIHwDCCB2egAwIBAgITfwAAUN5p0vsuL+8sQQAAAABQ3jAKBggqhkjOPQQDAjB2\r\nMRgwFgYKCZImiZPyLGQBGRYIaW50ZXJuYWwxFjAUBgoJkiaJk/IsZAEZFgZBbGlu\r\nbWExEjAQBgoJkiaJk/IsZAEZFgJNRTEuMCwGA1UEAxMlQWxpbm1hLUJhbmsgTWlk\r\nZGxlIEVhc3QgSXNzdWluZyBDQS1QMTAeFw0yMzEyMzEwNjU5NTNaFw0yNjEyMzAw\r\nNjU5NTNaMFQxCzAJBgNVBAYTAlNBMRYwFAYDVQQIEw1SaXlhZGggUmVnaW9uMQ8w\r\nDQYDVQQHEwZSaXlhZGgxHDAaBgNVBAMTE2NiYy5hbGlubWEuaW50ZXJuYWwwggEi\r\nMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQC39YY [...]
    key: "-----BEGIN PRIVATE KEY-----\r\nMIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQC39YYTAhHSGJAp\r\niOA8a+og3dygmyJGKJUiVwTmFd3ZI09q9QnEvBMBRlTmBXEBKpIlTx8LC5ofSqMA\r\nIobFGYnzme6/ZlV7HigfpjpCZ/9ByA375s5OcoKyslbcyJ4256fqcG1IHO7rZeFc\r\nRqTz50UfnYB3ia+CZ18v9fWbxQV3wFq2BlOi9dtE7uBn9aBzYsmEGbRSe2WQVbjv\r\nhMO6m/hr9nej6WyWK4uuyVZmhsSVKigikltUMPl183E1qOxsvvd+TdCXufo13FFf\r\nbpllwPO+B2+L/EGzu//lU2IFKGZqvip5Y0042Cs4BP1EI/jaobU/h/cgdj+VTX2J\r\nY9yzF5svAgMBAAECggEASAmdt1PYJq33xkwTg5W+2aAIBdy6Tz8 [...]
    caCertificate: "-----BEGIN CERTIFICATE-----\r\nMIIBsTCCAVegAwIBAgIQHii/wdzqBZlKzK6T3va0YjAKBggqhkjOPQQDAjAxMS8w\r\nLQYDVQQDEyZBbGlhbm0tQmFuayBFbnRlcnByaXNlIE9mZmxpbmUgUm9vdCBDQTAe\r\nFw0yMTA5MjAxMDUyNTZaFw00MTA5MjAxMTAyNTZaMDExLzAtBgNVBAMTJkFsaWFu\r\nbS1CYW5rIEVudGVycHJpc2UgT2ZmbGluZSBSb290IENBMFkwEwYHKoZIzj0CAQYI\r\nKoZIzj0DAQcDQgAEDT98nvR5BsxG+l16hxdTHKy7rnbIxq8jA1oa56vz+doyhfks\r\nfa1g0HJ6C+BEBXyruK45qentj/6huT3jL7Je3KNRME8wCwYDVR0PBAQDAgGGMA8G\r\nA1UdEwEB/wQFMAMBAf8wHQYDVR0OBBYEFKDl1YF0e [...]
  wildcardPolicy: None
